src/styles.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

#root,
#__next {
  isolation: isolate;
}

:root {
  --bg-header: #ffffff;
  --bg-main: #ededed;
  --bg-footer: #ffffff;
  --bg-nav: #0099ff;

  --color-main: #ffffff;
  --color-secondary: #0099ff;
  --color-secondary-dark: #000000;
  --color-temp-primary: #dbfdc4;
  --color-temp-secondary: #8afc60;

  --border-size: 1px;
  --border-style: solid;
  --border-color: #d8d8d8;
  --base-border: 1px solid var(--border-color);
  --base-radius: 5px;

  --full-width: 100vw;

  --base-h: 7vh;
  --nav-h: 4vh;

  --font-size-main: 16px;
  --font-size-small: 14px;
  --font-size-md: 18px;
  --font-size-heading: 40px;

  --page-padding: 0 0 0 0;
  --base-padding: 5px;
  --base-margin: 10px;
}

body {
  height: 100vh;
  width: var(--full-width);
  display: flex;
  flex-direction: column;
}

main {
  background: var(--bg-main);
  width: 100%;
  min-height: fit-content;
  padding: 0 20vw 0 20vw;
}
.top {
  padding: 0 20px;
}

header,
footer {
  min-height: var(--base-h);
  background: var(--bg-header);
  border: var(--base-border);
}

header {
  border: none;
  border-top: var(--base-border);
}

header > div {
  margin-bottom: var(--base-margin);
}

.title {
  font-size: var(--font-size-heading);
  color: var(--color-secondary);
}
.meteo {
  color: var(--color-secondary-dark);
}

.nav {
  background: var(--color-secondary);
  min-height: var(--nav-h);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav input[name="location"],
.btn-search {
  border-radius: var(--base-radius);
  border: none;
}

.search {
  padding: 2px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
}

.b-weather {
  height: 65vh;
  width: 60%;
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: 1fr 3fr;
  background: var(--bg-main);
  border-radius: var(--base-radius);
  gap: 5px;
  padding: var(--base-padding);
  font-size: var(--font-size-small);
}
main h2 {
  font-weight: 400;
}

main > div {
  margin-top: var(--base-margin);
}

.now {
  background-color: var(--color-main);
  border-radius: var(--base-radius);
  display: flex;
  padding: var(--base-padding);
}
.now,
.next {
  grid-row: 1;
}
.next {
  margin-bottom: var(--base-margin);
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 5px;
  width: 100%;
  grid-column: 2;
}
.tommorow,
.after-tommorow {
  background-color: var(--color-main);
  border-radius: var(--base-radius);
  height: 100%;
  width: 100%;
  display: flex;
  padding: var(--base-padding);
}
.bottom {
  grid-column: 1 / 3;
  grid-row: 2;
  background-color: var(--color-main);
  border-radius: var(--base-radius);
   background: blue;
}

.content {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
.day {
  font-size: var(--font-size-small);
  color: gray;
}
.day + div {
  display: flex;
}
.temp-data {
  display: flex;
  flex-direction: column;
  margin-top: var(--base-margin);
}
.temp {
  background: var(--color-temp-primary);
  padding: var(--base-padding);
  text-align: center;
  width: 80%;
}
.feels-like-temp {
  background: var(--color-temp-secondary);
  padding: var(--base-padding);
  text-align: center;
  transform: translateX(20px);
  width: 90%;
}

.ico {
  margin: var(--base-margin);
  margin-top: 0;
  width: 20%;
  height: 40%;
}

.bottom {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  gap: var(--base-margin);
  color: var(--color-main);
  padding-top: var(--base-padding);
  font-size: var(--font-size-small);
}

.container.aditional-data {
  background-color: #0000001f;
  height: 20%;
  flex-grow: 0;
}
.container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  gap: 10%;
  flex-grow: 1;
}

.conditions {
  font-size: var(--font-size-md);
  margin-bottom: var(--base-margin);
}
.n-temp {
  font-size: clamp(min(2vw, 50px), 120px, max(30vw, 150px));
  font-weight: bold;
}
.n-feels-like {
  background-color: #ffffff1a;
  padding: var(--base-padding);
  padding: 0 10px 0 10px;
}

.banner {
  padding: 0;
  background: blue;
}
.banner img {
  width: 100%;
  height: 5vh;
}

/*slider*/
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 30px;
  font-weight: bold;
  color: white;
}

.switch:after {
  position: relative;
  z-index: 1000;
  top: 2px;
  left: 7px;
  right: 0;
  bottom: 0;
  content: "°C";
  color: white;
}
.switch:before {
  position: relative;
  z-index: 1000;
  top: 2px;
  left: 7px;
  right: 0;
  bottom: 0;
  content: "°F";
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 22px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: #ccc;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196f3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}
footer {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  color: #0006;
  font-size: 12px;
  line-height: 14px;
  gap: var(--base-margin);
}

.contacts {
  color: #09f;
}

.author {
  color: var(--color-secondary-dark);
}
@media only screen and (max-width: 600px) {
  .b-weather {
    width: 100%;
  }
  .n-temp {
    font-size: 50px;
  }
  .top, main {
    padding: 0 5vw;
  }
  :root {
    --page-padding: 0 5vw 0 4vw;
  }
}
@media only screen and (min-width: 601px) and (max-width: 1200px) {
  .b-weather {
    width: 100%;
  }
  :root {
    --page-padding: 0 5vw 0 5vw;
  }
}

.page {
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: space-between;
}

main {
  flex-grow: 1;
 
}
.page > footer {
  flex-grow: 0;
}

